add a dummy about us page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
         <ul class="contact">
           <li><p><i class="icon-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>
           <li><p><i class="icon-phone"></i> <strong>Phone:</strong> (123) 456-7890</p></li>
-          <li><p><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a></p></li>
+          <li><p><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:qasim@admedly.com">qasim@admedly.com</a></p></li>
         </ul>
       </div>
     </div>
@@ -56,11 +56,11 @@
     <div class="row">
       <div class="span1">
         <a href="index.html" class="logo">
-          <img alt="Porto Website Template" src="img/logo-footer.png">
+          <img alt="Admedly" src="img/logo-footer.png">
         </a>
       </div>
       <div class="span7">
-        <p>© Copyright 2013 by Crivos. All Rights Reserved.</p>
+        <p>© Copyright 2013 by Admedly. All Rights Reserved.</p>
       </div>
       <div class="span4">
         <nav id="sub-menu">
