--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,9 @@
       <div class="contact-details">
         <h4>Contact Us</h4>
         <ul class="contact">
-          <li><p><i class="icon-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>
+          <li><p><i class="icon-map-marker"></i> <strong>Address:</strong> C3/102 Lotus Pond, Vaibhav Khand, Indirapuram</p></li>
           <li><p><i class="icon-phone"></i> <strong>Phone:</strong> (123) 456-7890</p></li>
-          <li><p><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:qasim@admedly.com">qasim@admedly.com</a></p></li>
+          <li><p><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:hi@admedly.com">hi@admedly.com</a></p></li>
         </ul>
       </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="span1">
         <a href="index.html" class="logo">
-          <img alt="Admedly" src="img/logo-footer.png">
+          <img alt="Admedly" src="/img/logo-footer.png">
         </a>
       </div>
       <div class="span7">
